<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="65dp"
        android:text="@string/bind_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="50dp"
        android:text="@string/unbind_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/show_all_songs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="47dp"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
    <TextView
        android:id="@+id/headingtitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_the_song_to_play_from_below"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="320dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/headingtitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter_song_id_to_show_info"
                android:layout_marginStart="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="320dp"
                />
            <EditText
                android:id="@+id/songIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="370dp"
                android:ems="5"
                android:inputType="number"
                android:minHeight="48dp"
                android:text=""
                android:imeOptions="actionSend"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headingtitle2"
                android:autofillHints=""
                tools:ignore="LabelFor"
                />

            <TextView
                android:id="@+id/songInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:layout_marginStart="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="420dp"
                />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>